# smartunarr

./: .gitignore  .gitlab-ci.yml  .versionrc.json  CHANGELOG.md  GITHUB_RELEASES.md  README.md  package-lock.json  package.json
docker/: DOCKERHUB.md  Dockerfile  README.md  backend.Dockerfile  backend.dev.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.unraid.yml  docker-compose.yml  frontend.Dockerfile  frontend.dev.Dockerfile  nginx.conf  supervisord.conf
docs/: API.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  SCORING_SYSTEM.md  USER_GUIDE.md  deployment.md
profiles/: blockbuster_v5.json  blockbuster_v6.json  blockbuster_v8.json  (+4 more)
src/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
src/backend/app/: __init__.py  config.py  main.py
src/backend/app/adapters/: ollama_adapter.py  plex_adapter.py  tunarr_adapter.py
src/backend/app/adapters/metadata/: __init__.py
src/backend/app/api/routes/: ai.py  channels.py  history.py  jobs.py  logs.py  profiles.py  programming.py  schedules.py  scoring.py  services.py  websocket.py
src/backend/app/core/: job_manager.py  scheduler.py  websocket_manager.py
src/backend/app/core/blocks/: __init__.py  time_block_manager.py
src/backend/app/core/programming/: __init__.py  generator.py
src/backend/app/core/scoring/: __init__.py  base_criterion.py  engine.py
src/backend/app/core/scoring/criteria/: age_criterion.py  bonus_criterion.py  duration_criterion.py  filter_criterion.py  genre_criterion.py  rating_criterion.py  strategy_criterion.py  timing_criterion.py  type_criterion.py
src/backend/app/db/: database.py  indexes.py
src/backend/app/models/: __init__.py  base.py  channel.py  content.py  history.py  result.py  schedule.py  service.py
src/backend/app/schemas/: profile_schema.json  profile_schema.py  profile_schema_v6.json
src/backend/app/services/: ai_profile_service.py  ai_prompt_template.py  cache_service.py  content_enrichment_service.py  history_service.py  plex_service.py  profile_migration.py  profile_service.py  result_service.py  schedule_service.py  scoring_service.py  service_config_service.py  tmdb_service.py  tunarr_service.py
src/backend/app/utils/: encryption.py
src/backend/profiles/: profil_kids_strict_v5.json  profil_kids_ultra_v6.json
src/backend/tests/: test_placeholder.py
(+171 files in other folders)
